[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.3"
fastapi = {extras = ["standard"], version = "^0.138.0"}
asyncpg = "^0.31.0"


[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "notebook (>=7.5.6,<8.0.0)"
]
